# jacobnilsson.com

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: deploy.yaml
include/: Endpoint.hpp  Scripts.hpp  Sites.hpp  Stylesheets.hpp  Templates.hpp
js/: gd.js  script.js
server/: README.md
sh/: install.sh
src/: Scripts.cpp  Sites.cpp  Stylesheets.cpp  Templates.cpp  main.cpp
